prog/1stPartyLibs/quirrel/quirrel/testData/exec/weird/2000_args.nut
local function fn(
 a000, a001, a002, a003, a004, a005, a006, a007, a008, a009,
 a010, a011, a012, a013, a014, a015, a016, a017, a018, a019,
 a020, a021, a022, a023, a024, a025, a026, a027, a028, a029,
 a030, a031, a032, a033, a034, a035, a036, a037, a038, a039,
 a040, a041, a042, a043, a044, a045, a046, a047, a048, a049,
 a050, a051, a052, a053, a054, a055, a056, a057, a058, a059,
 a060, a061, a062, a063, a064, a065, a066, a067, a068, a069,
 a070, a071, a072, a073, a074, a075, a076, a077, a078, a079,
 a080, a081, a082, a083, a084, a085, a086, a087, a088, a089,
 a090, a091, a092, a093, a094, a095, a096, a097, a098, a099,
 a100, a101, a102, a103, a104, a105, a106, a107, a108, a109,
 a110, a111, a112, a113, a114, a115, a116, a117, a118, a119,
 a120, a121, a122, a123, a124, a125, a126, a127, a128, a129,
 a130, a131, a132, a133, a134, a135, a136, a137, a138, a139,
 a140, a141, a142, a143, a144, a145, a146, a147, a148, a149,
 a150, a151, a152, a153, a154, a155, a156, a157, a158, a159,
 a160, a161, a162, a163, a164, a165, a166, a167, a168, a169,
 a170, a171, a172, a173, a174, a175, a176, a177, a178, a179,
 a180, a181, a182, a183, a184, a185, a186, a187, a188, a189,
 a190, a191, a192, a193, a194, a195, a196, a197, a198, a199,
 a200, a201, a202, a203, a204, a205, a206, a207, a208, a209,
 a210, a211, a212, a213, a214, a215, a216, a217, a218, a219,
 a220, a221, a222, a223, a224, a225, a226, a227, a228, a229,
 a230, a231, a232, a233, a234, a235, a236, a237, a238, a239,
 a240, a241, a242, a243, a244, a245, a246, a247, a248, a249,
 a250, a251, a252, a253, a254, a255, a256, a257, a258, a259,
 a260, a261, a262, a263, a264, a265, a266, a267, a268, a269,
 a270, a271, a272, a273, a274, a275, a276, a277, a278, a279,
 a280, a281, a282, a283, a284, a285, a286, a287, a288, a289,
 a290, a291, a292, a293, a294, a295, a296, a297, a298, a299,
 a300, a301, a302, a303, a304, a305, a306, a307, a308, a309,
 a310, a311, a312, a313, a314, a315, a316, a317, a318, a319,
 a320, a321, a322, a323, a324, a325, a326, a327, a328, a329,
 a330, a331, a332, a333, a334, a335, a336, a337, a338, a339,
 a340, a341, a342, a343, a344, a345, a346, a347, a348, a349,
 a350, a351, a352, a353, a354, a355, a356, a357, a358, a359,
 a360, a361, a362, a363, a364, a365, a366, a367, a368, a369,
 a370, a371, a372, a373, a374, a375, a376, a377, a378, a379,
 a380, a381, a382, a383, a384, a385, a386, a387, a388, a389,
 a390, a391, a392, a393, a394, a395, a396, a397, a398, a399,
 a400, a401, a402, a403, a404, a405, a406, a407, a408, a409,
 a410, a411, a412, a413, a414, a415, a416, a417, a418, a419,
 a420, a421, a422, a423, a424, a425, a426, a427, a428, a429,
 a430, a431, a432, a433, a434, a435, a436, a437, a438, a439,
 a440, a441, a442, a443, a444, a445, a446, a447, a448, a449,
 a450, a451, a452, a453, a454, a455, a456, a457, a458, a459,
 a460, a461, a462, a463, a464, a465, a466, a467, a468, a469,
 a470, a471, a472, a473, a474, a475, a476, a477, a478, a479,
 a480, a481, a482, a483, a484, a485, a486, a487, a488, a489,
 a490, a491, a492, a493, a494, a495, a496, a497, a498, a499,
 a500, a501, a502, a503, a504, a505, a506, a507, a508, a509,
 a510, a511, a512, a513, a514, a515, a516, a517, a518, a519,
 a520, a521, a522, a523, a524, a525, a526, a527, a528, a529,
 a530, a531, a532, a533, a534, a535, a536, a537, a538, a539,
 a540, a541, a542, a543, a544, a545, a546, a547, a548, a549,
 a550, a551, a552, a553, a554, a555, a556, a557, a558, a559,
 a560, a561, a562, a563, a564, a565, a566, a567, a568, a569,
 a570, a571, a572, a573, a574, a575, a576, a577, a578, a579,
 a580, a581, a582, a583, a584, a585, a586, a587, a588, a589,
 a590, a591, a592, a593, a594, a595, a596, a597, a598, a599,
 a600, a601, a602, a603, a604, a605, a606, a607, a608, a609,
 a610, a611, a612, a613, a614, a615, a616, a617, a618, a619,
 a620, a621, a622, a623, a624, a625, a626, a627, a628, a629,
 a630, a631, a632, a633, a634, a635, a636, a637, a638, a639,
 a640, a641, a642, a643, a644, a645, a646, a647, a648, a649,
 a650, a651, a652, a653, a654, a655, a656, a657, a658, a659,
 a660, a661, a662, a663, a664, a665, a666, a667, a668, a669,
 a670, a671, a672, a673, a674, a675, a676, a677, a678, a679,
 a680, a681, a682, a683, a684, a685, a686, a687, a688, a689,
 a690, a691, a692, a693, a694, a695, a696, a697, a698, a699,
 a700, a701, a702, a703, a704, a705, a706, a707, a708, a709,
 a710, a711, a712, a713, a714, a715, a716, a717, a718, a719,
 a720, a721, a722, a723, a724, a725, a726, a727, a728, a729,
 a730, a731, a732, a733, a734, a735, a736, a737, a738, a739,
 a740, a741, a742, a743, a744, a745, a746, a747, a748, a749,
 a750, a751, a752, a753, a754, a755, a756, a757, a758, a759,
 a760, a761, a762, a763, a764, a765, a766, a767, a768, a769,
 a770, a771, a772, a773, a774, a775, a776, a777, a778, a779,
 a780, a781, a782, a783, a784, a785, a786, a787, a788, a789,
 a790, a791, a792, a793, a794, a795, a796, a797, a798, a799,
 a800, a801, a802, a803, a804, a805, a806, a807, a808, a809,
 a810, a811, a812, a813, a814, a815, a816, a817, a818, a819,
 a820, a821, a822, a823, a824, a825, a826, a827, a828, a829,
 a830, a831, a832, a833, a834, a835, a836, a837, a838, a839,
 a840, a841, a842, a843, a844, a845, a846, a847, a848, a849,
 a850, a851, a852, a853, a854, a855, a856, a857, a858, a859,
 a860, a861, a862, a863, a864, a865, a866, a867, a868, a869,
 a870, a871, a872, a873, a874, a875, a876, a877, a878, a879,
 a880, a881, a882, a883, a884, a885, a886, a887, a888, a889,
 a890, a891, a892, a893, a894, a895, a896, a897, a898, a899,
 a900, a901, a902, a903, a904, a905, a906, a907, a908, a909,
 a910, a911, a912, a913, a914, a915, a916, a917, a918, a919,
 a920, a921, a922, a923, a924, a925, a926, a927, a928, a929,
 a930, a931, a932, a933, a934, a935, a936, a937, a938, a939,
 a940, a941, a942, a943, a944, a945, a946, a947, a948, a949,
 a950, a951, a952, a953, a954, a955, a956, a957, a958, a959,
 a960, a961, a962, a963, a964, a965, a966, a967, a968, a969,
 a970, a971, a972, a973, a974, a975, a976, a977, a978, a979,
 a980, a981, a982, a983, a984, a985, a986, a987, a988, a989,
 a990, a991, a992, a993, a994, a995, a996, a997, a998, a999,
 b000, b001, b002, b003, b004, b005, b006, b007, b008, b009,
 b010, b011, b012, b013, b014, b015, b016, b017, b018, b019,
 b020, b021, b022, b023, b024, b025, b026, b027, b028, b029,
 b030, b031, b032, b033, b034, b035, b036, b037, b038, b039,
 b040, b041, b042, b043, b044, b045, b046, b047, b048, b049,
 b050, b051, b052, b053, b054, b055, b056, b057, b058, b059,
 b060, b061, b062, b063, b064, b065, b066, b067, b068, b069,
 b070, b071, b072, b073, b074, b075, b076, b077, b078, b079,
 b080, b081, b082, b083, b084, b085, b086, b087, b088, b089,
 b090, b091, b092, b093, b094, b095, b096, b097, b098, b099,
 b100, b101, b102, b103, b104, b105, b106, b107, b108, b109,
 b110, b111, b112, b113, b114, b115, b116, b117, b118, b119,
 b120, b121, b122, b123, b124, b125, b126, b127, b128, b129,
 b130, b131, b132, b133, b134, b135, b136, b137, b138, b139,
 b140, b141, b142, b143, b144, b145, b146, b147, b148, b149,
 b150, b151, b152, b153, b154, b155, b156, b157, b158, b159,
 b160, b161, b162, b163, b164, b165, b166, b167, b168, b169,
 b170, b171, b172, b173, b174, b175, b176, b177, b178, b179,
 b180, b181, b182, b183, b184, b185, b186, b187, b188, b189,
 b190, b191, b192, b193, b194, b195, b196, b197, b198, b199,
 b200, b201, b202, b203, b204, b205, b206, b207, b208, b209,
 b210, b211, b212, b213, b214, b215, b216, b217, b218, b219,
 b220, b221, b222, b223, b224, b225, b226, b227, b228, b229,
 b230, b231, b232, b233, b234, b235, b236, b237, b238, b239,
 b240, b241, b242, b243, b244, b245, b246, b247, b248, b249,
 b250, b251, b252, b253, b254, b255, b256, b257, b258, b259,
 b260, b261, b262, b263, b264, b265, b266, b267, b268, b269,
 b270, b271, b272, b273, b274, b275, b276, b277, b278, b279,
 b280, b281, b282, b283, b284, b285, b286, b287, b288, b289,
 b290, b291, b292, b293, b294, b295, b296, b297, b298, b299,
 b300, b301, b302, b303, b304, b305, b306, b307, b308, b309,
 b310, b311, b312, b313, b314, b315, b316, b317, b318, b319,
 b320, b321, b322, b323, b324, b325, b326, b327, b328, b329,
 b330, b331, b332, b333, b334, b335, b336, b337, b338, b339,
 b340, b341, b342, b343, b344, b345, b346, b347, b348, b349,
 b350, b351, b352, b353, b354, b355, b356, b357, b358, b359,
 b360, b361, b362, b363, b364, b365, b366, b367, b368, b369,
 b370, b371, b372, b373, b374, b375, b376, b377, b378, b379,
 b380, b381, b382, b383, b384, b385, b386, b387, b388, b389,
 b390, b391, b392, b393, b394, b395, b396, b397, b398, b399,
 b400, b401, b402, b403, b404, b405, b406, b407, b408, b409,
 b410, b411, b412, b413, b414, b415, b416, b417, b418, b419,
 b420, b421, b422, b423, b424, b425, b426, b427, b428, b429,
 b430, b431, b432, b433, b434, b435, b436, b437, b438, b439,
 b440, b441, b442, b443, b444, b445, b446, b447, b448, b449,
 b450, b451, b452, b453, b454, b455, b456, b457, b458, b459,
 b460, b461, b462, b463, b464, b465, b466, b467, b468, b469,
 b470, b471, b472, b473, b474, b475, b476, b477, b478, b479,
 b480, b481, b482, b483, b484, b485, b486, b487, b488, b489,
 b490, b491, b492, b493, b494, b495, b496, b497, b498, b499,
 b500, b501, b502, b503, b504, b505, b506, b507, b508, b509,
 b510, b511, b512, b513, b514, b515, b516, b517, b518, b519,
 b520, b521, b522, b523, b524, b525, b526, b527, b528, b529,
 b530, b531, b532, b533, b534, b535, b536, b537, b538, b539,
 b540, b541, b542, b543, b544, b545, b546, b547, b548, b549,
 b550, b551, b552, b553, b554, b555, b556, b557, b558, b559,
 b560, b561, b562, b563, b564, b565, b566, b567, b568, b569,
 b570, b571, b572, b573, b574, b575, b576, b577, b578, b579,
 b580, b581, b582, b583, b584, b585, b586, b587, b588, b589,
 b590, b591, b592, b593, b594, b595, b596, b597, b598, b599,
 b600, b601, b602, b603, b604, b605, b606, b607, b608, b609,
 b610, b611, b612, b613, b614, b615, b616, b617, b618, b619,
 b620, b621, b622, b623, b624, b625, b626, b627, b628, b629,
 b630, b631, b632, b633, b634, b635, b636, b637, b638, b639,
 b640, b641, b642, b643, b644, b645, b646, b647, b648, b649,
 b650, b651, b652, b653, b654, b655, b656, b657, b658, b659,
 b660, b661, b662, b663, b664, b665, b666, b667, b668, b669,
 b670, b671, b672, b673, b674, b675, b676, b677, b678, b679,
 b680, b681, b682, b683, b684, b685, b686, b687, b688, b689,
 b690, b691, b692, b693, b694, b695, b696, b697, b698, b699,
 b700, b701, b702, b703, b704, b705, b706, b707, b708, b709,
 b710, b711, b712, b713, b714, b715, b716, b717, b718, b719,
 b720, b721, b722, b723, b724, b725, b726, b727, b728, b729,
 b730, b731, b732, b733, b734, b735, b736, b737, b738, b739,
 b740, b741, b742, b743, b744, b745, b746, b747, b748, b749,
 b750, b751, b752, b753, b754, b755, b756, b757, b758, b759,
 b760, b761, b762, b763, b764, b765, b766, b767, b768, b769,
 b770, b771, b772, b773, b774, b775, b776, b777, b778, b779,
 b780, b781, b782, b783, b784, b785, b786, b787, b788, b789,
 b790, b791, b792, b793, b794, b795, b796, b797, b798, b799,
 b800, b801, b802, b803, b804, b805, b806, b807, b808, b809,
 b810, b811, b812, b813, b814, b815, b816, b817, b818, b819,
 b820, b821, b822, b823, b824, b825, b826, b827, b828, b829,
 b830, b831, b832, b833, b834, b835, b836, b837, b838, b839,
 b840, b841, b842, b843, b844, b845, b846, b847, b848, b849,
 b850, b851, b852, b853, b854, b855, b856, b857, b858, b859,
 b860, b861, b862, b863, b864, b865, b866, b867, b868, b869,
 b870, b871, b872, b873, b874, b875, b876, b877, b878, b879,
 b880, b881, b882, b883, b884, b885, b886, b887, b888, b889,
 b890, b891, b892, b893, b894, b895, b896, b897, b898, b899,
 b900, b901, b902, b903, b904, b905, b906, b907, b908, b909,
 b910, b911, b912, b913, b914, b915, b916, b917, b918, b919,
 b920, b921, b922, b923, b924, b925, b926, b927, b928, b929,
 b930, b931, b932, b933, b934, b935, b936, b937, b938, b939,
 b940, b941, b942, b943, b944, b945, b946, b947, b948, b949,
 b950, b951, b952, b953, b954, b955, b956, b957, b958, b959,
 b960, b961, b962, b963, b964, b965, b966, b967, b968, b969,
 b970, b971, b972, b973, b974, b975, b976, b977, b978, b979,
 b980, b981, b982, b983, b984, b985, b986, b987, b988, b989,
 b990, b991, b992, b993, b994, b995, b996, b997, b998, b999
) {}
